--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 python:
         - "3.5"
-        - "3.6"
+
 install:
-        pip install -r requirements.txt
+  - pip install -r requirements.txt
 
 script: python -m unittest
 
