--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,7 @@ name = "pypi"
 [packages]
 #tensorflow = ">=1.12"
 tensorflow = {path = "/home/davex32/build/tensorflow_pkg/tensorflow-1.12.0-cp36-cp36m-linux_x86_64.whl"}
+pygraphviz = "*"
 
 [dev-packages]
 
