--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ astor==0.7.1
 gast==0.2.2
 grpcio==1.18.0
 h5py==2.9.0
-https://github.com/davidenunes/tensorflow-wheels/releases/download/r1.13.0rc1.cp37/tensorflow-1.13.0rc1-cp37-cp37m-linux_x86_64.whl#egg=tensorflow
 keras-applications==1.0.7
 keras-preprocessing==1.0.9
 markdown==3.0.1
@@ -14,6 +13,7 @@ pbr==5.1.2
 protobuf==3.7.0rc2
 pygraphviz==1.5
 six==1.12.0
+tensorflow==1.13.0
 tensorboard==1.12.2
 tensorflow-estimator==1.13.0rc0
 termcolor==1.1.0
