--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,3 @@
--i https://pypi.python.org/simple
-absl-py==0.7.0
-astor==0.7.1
-gast==0.2.2
-grpcio==1.18.0
-h5py==2.9.0
-keras-applications==1.0.7
-keras-preprocessing==1.0.9
-markdown==3.0.1
-mock==2.0.0
-numpy==1.16.1
-pbr==5.1.2
-protobuf==3.7.0rc2
 pygraphviz==1.5
-six==1.12.0
 tensorflow==1.13.1
-tensorboard==1.12.2
-tensorflow-estimator==1.13.0rc0
-termcolor==1.1.0
-werkzeug==0.14.1
-wheel==0.33.0 ; python_version >= '3.7'
+numpy>=1.16.2
