--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
   - pip install tensorflow
   - pip install pygraphviz
   - pip install tqdm
+  - pip install matplotlib
 
 script: python -m unittest
 
