Added init module for namespace consistency Fixed model eval step Model needs cleaning and more tests

--- a/docs/gendocs.yaml
+++ b/docs/gendocs.yaml
@@ -25,3 +25,17 @@ pages:
     functions:
       - dense_one_hot
       - matrix_indices
+  - page: "init.md"
+    source: 'tensorx/init.py'
+    functions:
+      - zeros
+      - ones
+      - constant
+      - random_uniform
+      - random_normal
+      - glorot_uniform
+      - glorot_normal
+      - orthogonal
+      - identity
+      - he_uniform
+      - he_normal
