Fixed documentation structure

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,5 @@
 site_name: TensorX Documentation
+site_favicon: assets/images/icon.png
 
 docs_dir: "docs/sources"
 
@@ -29,11 +30,16 @@ theme:
   palette:
     primary: 'cyan'
     accent: 'cyan'
-  logo: '/assets/images/logo.png'
+  logo: 'assets/images/icon.png'
 
-#nav:
-#  - Home: index.md
-#  - API: api.md
+nav:
+  - Home: index.md
+  - Getting Started: started
+  - Layers:
+      - Core: layers/core.md
+  - Train:
+      - Model: train/model.md
+  - Contributing: contributing.md
 #  - Layers: layers.md
-#logo: 'assets/tx4.png'
+
 
