added alpha param to Dropout Layer added alpha param to sparse dropout in transform test_utils renammed to testing

--- a/docs/gendocs.yaml
+++ b/docs/gendocs.yaml
@@ -21,6 +21,7 @@ pages:
     source: 'tensorx/math.py'
     functions:
       - sparse_multiply_dense
+      - rms
   - page: "transform.md"
     source: 'tensorx/transform.py'
     functions:
