--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
 language: python
 python:
-- '3.6'
-matrix:
-  include:
-  - python: 3.7
-    dist: xenial
-    sudo: true
-install:
-  - pip install tensorflow
-  - pip install pygraphviz
-  - pip install tqdm
-  - pip install matplotlib
+- '3.7'
+- '3.8'
 
-script: python -m unittest
+before_install:
+  - pip install poetry
+
+install:
+  - poetry install
+  - poetry run pip install tensorflow
+
+script: poetry run python -m unittest
 
