--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "TensorX"
+name = "tensorx"
 version = "2.0.0"
 repository = "https://github.com/davidenunes/tensorx"
 homepage = "https://github.com/davidenunes/tensorx"
@@ -25,14 +25,14 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "3.8"
 graphviz = { version = "^0.14.1", optional = true }
 tensornetwork = { version = "^0.4.1", optional = true }
 tqdm = { version = "^4.48.1", optional = true }
 pyqtgraph = { version = "^0.11.0", optional = true }
 matplotlib = { version = "^3.3.0", optional = true }
+PyQt5 = { version = "^5.15.0", optional = true }
 numpy = "^1.19.1"
-PyQt5 = "^5.15.0"
 
 [tool.poetry.extras]
 pyqtgraph = ["pyqtgraph", "PyQt5"]
