--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "3.8"
+python = "^3.7"
 graphviz = { version = "^0.14.1", optional = true }
 tensornetwork = { version = "^0.4.1", optional = true }
 tqdm = { version = "^4.48.1", optional = true }
