--- a/docs/gendocs.yaml
+++ b/docs/gendocs.yaml
@@ -22,10 +22,9 @@ pages:
     functions:
       - sparse_multiply_dense
       - rms
-  - page: "transform.md"
+  - page: "ops.md"
     source: 'tensorx/ops.py'
     functions:
-      - dense_one_hot
       - matrix_indices
   - page: "init.md"
     source: 'tensorx/init.py'
