--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ tqdm = { version = "^4.48.1", optional = true }
 pyqtgraph = { version = "^0.11.0", optional = true }
 matplotlib = { version = "^3.3.0", optional = true }
 PyQt5 = { version = "^5.15.0", optional = true }
-numpy = "^1.19.0"
+numpy = "~1.18"
 
 [tool.poetry.extras]
 pyqtgraph = ["pyqtgraph", "PyQt5"]
