--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,7 +41,7 @@ theme:
 nav:
   - Home: index.md
   - Getting Started:
-      - Installation: started/install.md
+      - Installation: start/install.md
   - Layers:
       - Core: layers/core.md
   - Train:
