Added docs to tutorial Fixed Input layer to be consistent with input shape if no value is given

--- a/docs/gendocs.yaml
+++ b/docs/gendocs.yaml
@@ -11,7 +11,7 @@ pages:
       - Model:
           - train
           - set_optimizer
-  - page: "layers/core.md"
+  - page: "api/layers.md"
     source: 'tensorx/layers.py'
     classes:
       - Linear
