--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,8 +42,9 @@ nav:
   - Home: index.md
   - Getting Started:
       - Installation: start/install.md
-  - Layers:
-      - Core: layers/core.md
+      - Basics: start/tutorial.md
+  - API:
+      - layers: api/layers.md
   - Train:
       - Model: train/model.md
   - Contributing: contributing.md
