Edit docs for layers Fix redundant init_state assign to self.layer_state

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ theme:
   logo: 'assets/images/logo_full.svg'
   favicon: 'assets/images/tx.png'
   features:
-    - tabs
+    - navigation.tabs
     - instant
 nav:
   - Home: index.md
