--- a/docs/gendocs.yaml
+++ b/docs/gendocs.yaml
@@ -7,22 +7,22 @@ url: https://tensorx.org/
 pages:
   - page: "train/model.md"
     source: "tensorx/train/model.py"
-    methods:
+    classes:
       - Model:
           - train
           - set_optimizer
   - page: "api/layers.md"
     source: 'tensorx/layers.py'
-    methods:
-      - LayerState:
-          - variables
-          - var_dict
-      - LayerProto:
-          - update
     classes:
       - Linear
       - Input
       - Module
+      - LayerState:
+        - variables
+        - var_dict
+      - LayerProto:
+        - update
+      - Layer
 
 
 
