--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
-graphviz = { version = "^0.14.1", optional = true }
+pygraphviz = { version = "*", optional = true }
 tensornetwork = { version = "^0.4.1", optional = true }
 tqdm = { version = "^4.48.1", optional = true }
 pyqtgraph = { version = "^0.11.0", optional = true }
@@ -45,7 +45,7 @@ pyqtgraph = ["pyqtgraph", "PyQt5"]
 matplotlib = ["matplotlib"]
 tqdm = ["tqdm"]
 tensornetwork = ["tensornetwork"]
-graphviz = ["graphviz"]
+pygraphviz = ["pygraphviz"]
 
 [tool.poetry.dev-dependencies]
 mkdocs = "*"
