--- a/docs/gendocs.yaml
+++ b/docs/gendocs.yaml
@@ -5,31 +5,34 @@ url: https://tensorx.org/
 
 
 pages:
-  - page: "train/model.md"
+  - page: "api/layers/Linear.md"
+    source: "tensorx/layers.py"
+    classes:
+      - Linear
+
+  - page: "api/layers/Activation.md"
+    source: "tensorx/layers.py"
+    classes:
+      - Activation
+
+  - page: "api/layers/MHAttention.md"
+    source: "tensorx/layers.py"
+    classes:
+      - MHAttention
+
+  - page: "api/train/model.md"
     source: "tensorx/train/model.py"
     classes:
       - Model:
           - train
           - set_optimizer
-  - page: "api/layers.md"
-    source: 'tensorx/layers.py'
-    classes:
-      - Linear
-      - Input
-      - Module
-      - LayerState:
-        - variables
-        - var_dict
-      - LayerProto:
-        - update
-      - Layer
 
 
 
   - page: "api/math.md"
     source: 'tensorx/math.py'
     functions:
-      - sparse_multiply_dense
+      - sparse_dense_multiply
       - rms
   - page: "api/ops.md"
     source: 'tensorx/ops.py'
