--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,14 +31,14 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.7 < 3.9"
 pygraphviz = { version = "*", optional = true }
 tensornetwork = { version = "^0.4.1", optional = true }
 tqdm = { version = "^4.48.1", optional = true }
 pyqtgraph = { version = "^0.11.0", optional = true }
 matplotlib = { version = "^3.3.0", optional = true }
 PyQt5 = { version = "^5.15.0", optional = true }
-numpy = "~1.18"
+numpy = "*"
 
 [tool.poetry.extras]
 pyqtgraph = ["pyqtgraph", "PyQt5"]
