--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "tensorx"
-version = "2.0.0-a.1"
+version = "2.0.0"
 repository = "https://github.com/davidenunes/tensorx"
 homepage = "https://tensorx.org"
 readme = 'README.md'
