--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
         - Lookup: api/layers/Lookup.md
         - Activation: api/layers/Activation.md
         - Module: api/layers/Module.md
+        - MHAttention: api/layers/MHAttention.md
         - Recurrent Layers:
             - RNN: api/layers/rnn/RNN.md
             - RNNBaseCell: api/layers/rnn/BaseRNNCell.md
